# pysus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
datasus/: decompress.c
scripts/: dbc2dbf.py
src/: decompress.c
src/dbc2dbf/: Makefile  dbc2dbf.c
src/pysus/: __init__.py  __main__.py  datasus.py
