[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datasus"
version = "0.0.1"
authors = [
  { name="Daniela Petruzalek", email="daniela.petruzalek@gmail.com" },
]
description = "Utilities to read DATASUS (*.dbc) files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danicat/pysus"
"Bug Tracker" = "https://github.com/danicat/pysus/issues"